--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <h1 class="title">TIC-TAC-TOE</h1>
         <div class="line-header"></div>
     </header>
-    <div class="board x" id="board">
+    <div class="board" id="board">
         <div class="field" data-field></div>
         <div class="field" data-field></div>
         <div class="field" data-field></div>
