add a winning page, draw page and fixed code (js)

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <div class="field" data-field></div>
         <div class="field" data-field></div>
     </div>
-    <div class="winning-page">
+    <div class="winning-page" id="winningPage">
         <div data-winning-page-text></div>
         <button id="restartBtn">Restart</button>
     </div>
